Fix z-index issue (#65)

--- a/app/components/modals/base-modal/styles.scss
+++ b/app/components/modals/base-modal/styles.scss
@@ -2,7 +2,6 @@
   @extend .card-2;
   background: $off-white;
   color: $slate;
-  overflow: hidden;
 }
 
 header {
